--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -49,13 +49,14 @@
                                                     </div>
                                                 </div>
                                             </div>
-           <div class="link-menu link-menu--style-3 py-4 border-bottom">
-            <%= link_to 'Mon profil', current_user, :class =>"active" %>
-            <%= link_to 'Modifier mon profil', current_user %>
-            <%= link_to 'Mes Matchs', match_user_path(current_user) %>
-            <%= link_to 'Following', following_user_path(current_user) %>
-            <%= link_to 'Followers', followers_user_path(current_user) %>
-          </div>
+                                      <div class="link-menu link-menu--style-3 py-4 border-bottom">
+                                        <%= link_to 'Mon profil',  current_user, :class =>"active" %>
+                                        <%= link_to 'Modifier mon profil', edit_user_registration_path  %>
+                                        <%= link_to 'Following', following_user_path(current_user) %>
+                                        <%= link_to 'Followers', followers_user_path(current_user) %>
+                                      </div>
+
+
 
                                             <!-- Account settings -->
                                             <div class="row">
