--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,149 +1,126 @@
 <section class="slice-sm sct-color-1">
-    <div class="profile">
-        <div class="container">
-            <div class="row cols-xs-space cols-sm-space cols-md-space">
-                <div class="col-lg-4">
-                    <div class="sidebar sidebar-inverse bg-base-1 sidebar--style-2 no-border stickyfill">
-                        <div class="widget">
-        <!-- Profile picture -->
-                 <div class="profile-picture profile-picture--style-2">
-                            <% if @user.avatar.attached? %>
-                                <%= image_tag @user.avatar, class: "img-center"%>
-                                <% else %>
-                                    <%= image_tag "profil.jpg", class: "img-center"%>
-                                <% end %>
-                                <a href="#" class="btn-aux">
-                                    <i class="ion ion-edit"></i>
-                                </a>
-                            </div>
-                  <!-- Profile details -->
-                  <div class="profile-details">
-                      <h2 class="heading heading-4 strong-500 profile-name"><%= @user.first_name %> <%= @user.last_name %></h2>
-                      
-                      <h3 class="heading heading-light heading-6 strong-400 profile-location"><%= @user.city %>, <%= @user.country %></h3>
-                  </div>
-
-                  <!-- Profile connect -->
-                  <div class="profile-connect mt-4">  
-                      <a href="#" class="btn btn-styled btn-base-2 btn-circle">Send message</a>
-                            </div>  
+  <div class="profile">
+    <div class="container">
+     	<div class="row cols-xs-space cols-sm-space cols-md-space">
+        <div class="col-lg-4">
+          <div class="sidebar sidebar-inverse bg-base-1 sidebar--style-2 no-border stickyfill">
+            <div class="widget">
+              <div class="profile-picture profile-picture--style-2">
+                <% if @user.avatar.attached? %>
+                  <%= image_tag @user.avatar, class: "img-center"%>
+                <% else %>
+                  <%= image_tag "profil.jpg", class: "img-center"%>
+                <% end %>
+                <a href="#" class="btn-aux"><i class="ion ion-edit"></i></a>
               </div>
-                    </div>
+              <div class="profile-details">
+                <h2 class="heading heading-4 strong-500 profile-name"><%= @user.first_name %> <%= @user.last_name %></h2>
+                <h3 class="heading heading-light heading-6 strong-400 profile-location"><%= @user.city %>, <%= @user.country %></h3>
+              </div>
+              <div class="profile-connect mt-4">  
+                <a href="#" class="btn btn-styled btn-base-2 btn-circle">Send message</a>
+              </div>  
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-8">
+          <div class="main-content">
+            <div class="page-title">
+              <div class="row align-items-center">
+                <div class="col-lg-6 col-12">
+                  <h2 class="heading heading-5 text-capitalize strong-500 mb-0">Profil</h2>
                 </div>
-
-                                    <div class="col-lg-8">
-                                        <div class="main-content">
-                                            <!-- Page title -->
-                                            <div class="page-title">
-                                                <div class="row align-items-center">
-                                                    <div class="col-lg-6 col-12">
-                                                        <h2 class="heading heading-5 text-capitalize strong-500 mb-0">Profil
-                                                        </h2>
-                                                    </div>
-                                                    <div class="col-lg-6 col-12">
-
-                                                    </div>
-                                                </div>
-                                            </div>
-                                       <div class="link-menu link-menu--style-3 py-4 border-bottom">
-                                        <%= link_to 'Mon profil', current_user %>
-                                        <%= link_to 'Modifier mon profil', edit_user_registration_path, :class =>"active" %>
-                                        <%= link_to 'Following', following_user_path(current_user) %>
-                                        <%= link_to 'Followers', followers_user_path(current_user) %>
-                                      </div>
-
-                                      <div class="link-menu link-menu--style-3 py-4 ">
-                                        <%= link_to 'Paramètres général', edit_user_registration_path, :class =>"active" %>
-                                        <%= link_to 'Préférences', interests_edit_path(current_user[:id])%>
-                                        <%= link_to 'Langues', languages_edit_path(current_user[:id]) %>
-                                      </div>
-          <!-- Account settings -->
-          <div class="row">
-            <div class="col-lg-12">
-              <form class="form-default" data-toggle="validator" role="form">
-                <!-- Change profile picture -->
+                <div class="col-lg-6 col-12">
+              	</div>
+            	</div>
+          	</div>
+            <div class="link-menu link-menu--style-3 py-4 border-bottom">
+              <%= link_to 'Mon profil', current_user %>
+              <%= link_to 'Modifier mon profil', edit_user_registration_path, :class =>"active" %>
+              <%= link_to 'Following', following_user_path(current_user) %>
+              <%= link_to 'Followers', followers_user_path(current_user) %>
+            </div>
+            <div class="link-menu link-menu--style-3 py-4 ">
+              <%= link_to 'Paramètres général', edit_user_registration_path, :class =>"active" %>
+              <%= link_to 'Préférences', interests_edit_path(current_user[:id])%>
+              <%= link_to 'Langues', languages_edit_path(current_user[:id]) %>
+            </div>
+            <div class="row">
+              <div class="col-lg-12">
                 <div class="card no-border bg-transparent">
                   <div class="card-title px-0 pb-0 no-border">
-                    <%= form_for(@user) do |form| %>
-                    <h3 class="heading heading-6 strong-600">
-                      Changer sa photo de profil
-                    </h3>
+                    <h3 class="heading heading-6 strong-600">Changer sa photo de profil</h3>
                   </div>
                   <div class="card-body px-0">
                     <div class="row">
-                      <div class="col-md-6 col-lg-4">
-                        <div class="form-group">
-                          <label>Nouvelle image</label>
-                          <%= form.file_field :avatar%>
-                        </div>
-                      </div>
-                      <div class="col-md-6 col-lg-4">
-                        <div class="form-group">
-                          <%= form.submit "Confirmation", :class =>"btn btn-base-1"%>
-                        </div>
-                    <% end %>
-                      </div>
+                    	<%= form_for(@user) do |form| %>
+                      	<div class="col-md-6 col-lg-4">
+                      	  <div class="form-group">
+                      	    <label>Nouvelle image</label>
+                      	    <%= form.file_field :avatar %>
+                      	  </div>
+                      	</div>
+                      	<div class="col-md-6 col-lg-4">
+                      	  <div class="form-group">
+                      	    <%= form.submit "Confirmation", :class =>"btn btn-base-1"%>
+                      	  </div>
+                      	</div>
+                      <% end %>
                     </div>
                   </div>
                 </div>
-
                 <hr class="mt-0 mb-0">
-                  <!-- Change password -->
-                  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-                    <%= devise_error_messages! %>
-                    <div class="card no-border bg-transparent">
-                      <div class="card-title px-0 pb-0 no-border">
-                        <h3 class="heading heading-6 strong-600">
-                          Modifier le mot de passe
-                        </h3>
-                      </div>
-                      <div class="card-body px-0">
-                        <div class="row">
-                          <div class="col-md-6 col-lg-4">
-                            <div class="form-group">
-                              <label class="control-label">Mot de passe actuel</label>
-                              <%= f.password_field :current_password, autocomplete: "current-password", :class =>"form-control form-control-lg" %>
-                            </div>
-                          </div>
-                          <div class="col-md-6 col-lg-4">
-                            <div class="form-group">
-                              <label class="control-label">Nouveau mot de passe</label>
-                              <%= f.password_field :password, autocomplete: "new-password",  :class => "form-control form-control-lg" %>
-                              <% if @minimum_password_length %><br/>
-                                <em><%= @minimum_password_length %> characters minimum</em>
-                              <% end %>
-                            </div>
-                          </div>
-                          <div class="col-md-6 col-lg-4">
-                            <div class="form-group">
-                              <label class="control-label">Confirmer le mot de passe</label>
-                              <%= f.password_field :password_confirmation, autocomplete: "new-password", :class =>"form-control form-control-lg" %>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="text-right">
-                          <%= f.submit "Valider", :class =>"btn btn-base-1"%>
-                        </div>
-                      </div>
-                    </div>
-                  <% end %>
-                  <%= link_to "Back", :back %>
-                  <hr class="mt-0 mb-0">
-                  <!-- Delete account -->
+                <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+                  <%= devise_error_messages! %>
                   <div class="card no-border bg-transparent">
                     <div class="card-title px-0 pb-0 no-border">
-                      <h3 class="heading heading-6 strong-600">
-                        Supprimer son compte
-                      </h3>
-                      <p class="mt-1 mb-0">
-                        Pour supprimer votre compte, cliquez sur le bouton ci dessous.
-                      </p> <br>
-                      <%= button_to "Supprimer mon compte", registration_path(resource_name), :class =>"btn btn-base-1", data: { confirm: "Vous allez nous manquer... Êtes vous sur ?" }, method: :delete %>
-                      <%= link_to "Back", :back %>
+                      <h3 class="heading heading-6 strong-600">Modifier le mot de passe</h3>
                     </div>
+                    <div class="card-body px-0">
+                      <div class="row">
+                        <div class="col-md-6 col-lg-4">
+                          <div class="form-group">
+                            <label class="control-label">Mot de passe actuel</label>
+                            <%= f.password_field :current_password, autocomplete: "current-password", :class =>"form-control form-control-lg" %>
+                          </div>
+                        </div>
+                        <div class="col-md-6 col-lg-4">
+                          <div class="form-group">
+                            <label class="control-label">Nouveau mot de passe</label>
+                            <%= f.password_field :password, autocomplete: "new-password",  :class => "form-control form-control-lg" %>
+                            <% if @minimum_password_length %><br/>
+                              <em><%= @minimum_password_length %> characters minimum</em>
+                            <% end %>
+                          </div>
+                        </div>
+                        <div class="col-md-6 col-lg-4">
+                          <div class="form-group">
+                            <label class="control-label">Confirmer le mot de passe</label>
+                            <%= f.password_field :password_confirmation, autocomplete: "new-password", :class =>"form-control form-control-lg" %>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="text-right">
+                        <%= f.submit "Valider", :class =>"btn btn-base-1"%>
+                      </div>
+                    </div>
+                  </div>
+                <% end %>
+                <%= link_to "Back", :back %>
+                <hr class="mt-0 mb-0">
+                <div class="card no-border bg-transparent">
+                  <div class="card-title px-0 pb-0 no-border">
+                    <h3 class="heading heading-6 strong-600">Supprimer son compte</h3>
+                    <p class="mt-1 mb-0">Pour supprimer votre compte, cliquez sur le bouton ci dessous.</p><br>
+                    <%= button_to "Supprimer mon compte", registration_path(resource_name), :class =>"btn btn-base-1", data: { confirm: "Vous allez nous manquer... Êtes vous sur ?" }, method: :delete %>
+                    <%= link_to "Back", :back %>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </section>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
