--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -73,9 +73,12 @@
                 <div class="card no-border bg-transparent">
                   <div class="card-title px-0 pb-0 no-border">
                     <h3 class="heading heading-6 strong-600">Supprimer sa photo de profil</h3>
+                  </div>
+                  <div class="card-body px-0">
                     <p class="mt-1 mb-0">Pour supprimer votre photo de profil, cliquez sur le bouton ci dessous.</p><br>
                     <%= button_to "Supprimer ma photo", :class =>"btn btn-base-1", method: :delete %>
                   </div>
+                </div>
                 <hr class="mt-0 mb-0">
                 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
                   <%= devise_error_messages! %>
@@ -117,6 +120,8 @@
                 <div class="card no-border bg-transparent">
                   <div class="card-title px-0 pb-0 no-border">
                     <h3 class="heading heading-6 strong-600">Supprimer son compte</h3>
+                  </div>
+                  <div class="card-body px-0">
                     <p class="mt-1 mb-0">Pour supprimer votre compte, cliquez sur le bouton ci dessous.</p><br>
                     <%= button_to "Supprimer mon compte", registration_path(resource_name), :class =>"btn btn-base-1", data: { confirm: "Vous allez nous manquer... Êtes-vous sûr ?" }, method: :delete %>
                   </div>
