--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -45,91 +45,92 @@
                                 </div>
                             </div>
                         </div>
-                    <div class="link-menu link-menu--style-3 py-4 border-bottom">
-                    <%= link_to 'Mon profil', current_user%>
-                    <%= link_to 'Modifier mon profil', current_user %>
-                    <%= link_to 'Mes Matchs', match_user_path(current_user) %>
-                    <%= link_to 'Following', following_user_path(current_user) %>
-                  </div>
-                <!-- Account settings -->
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="form-default" data-toggle="validator" role="form">
-                            <!-- General information -->
+                        <div class="link-menu link-menu--style-3 py-4 border-bottom">
+                        <%= link_to 'Mon profil', current_user%>
+                        <%= link_to 'Modifier mon profil', edit_user_registration_path %>
+                        <%= link_to 'Mes Matchs', match_user_path(current_user) %>
+                        <%= link_to 'Following', following_user_path(current_user) %>
+                      </div>
+                    <!-- Account settings -->
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="form-default" data-toggle="validator" role="form">
+                                <!-- General information -->
+                                    <div class="card no-border bg-transparent">
+                                        <div class="card-title px-0 pb-0 no-border">
+                                            <h2 class="heading heading-5 text-capitalize strong-500 mb-0">Biographie
+                                            </h2>
+                                            <p class="mt-1 mb-0">
+                                                <%= @user.bio %>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Account info -->
+                                <div class="main-content">
+                                <!-- Languages section -->
+                                    <div class="page-title">
+                                        <div class="row align-items-center">
+                                            <div class="col-lg-6 col-12">
+                                                <h2 class="heading heading-5 text-capitalize strong-500 mb-0">
+                                                    <i class="ion-ios-arrow-back"></i> Langues
+                                                </h2>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-lg-6">
+                                            <div class="card no-border bg-transparent">
+                                                <div class="card-title px-0">
+                                                    <h3 class="heading heading-6 strong-600">
+                                                    Langues maitrisées :
+                                                    </h3>
+                                                </div>
+                                                <div class="card-body px-0">
+                                                    <div>
+                                                        <ul class="checkbox">
+                                                            <% Language.find(@user.spoken_languages.ids).each do |language| %>
+                                                                <li><%= language.name %></li>
+                                                            <% end %>
+                                                        </ul>
+                                                    </div>           
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-6">
+                                            <div class="card no-border bg-transparent">
+                                                <div class="card-title px-0">
+                                                    <h3 class="heading heading-6 strong-600">
+                                                    Langues en cours d'apprentissage : 
+                                                    </h3>
+                                                </div>
+                                                <div class="card-body px-0">  
+                                                    <div>
+                                                        <ul class="checkbox">
+                                                            <% Language.find(@user.wanted_languages.ids).each do |language| %>
+                                                                <li><%= language.name %></li>
+                                                            <% end %> 
+                                                        </ul>
+                                                    </div>  
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>                                                  
+                            <!-- Interests section  -->
                                 <div class="card no-border bg-transparent">
                                     <div class="card-title px-0 pb-0 no-border">
-                                        <h2 class="heading heading-5 text-capitalize strong-500 mb-0">Biographie
-                                        </h2>
-                                        <p class="mt-1 mb-0">
-                                            <%= @user.bio %>
-                                        </p>
+                                        <h3 class="heading heading-6 strong-600">
+                                            Centres d'intérêts
+                                        </h3>
                                     </div>
-                                </div>
-                            </div>
-                            <!-- Account info -->
-                            <div class="main-content">
-                            <!-- Languages section -->
-                                <div class="page-title">
-                                    <div class="row align-items-center">
-                                        <div class="col-lg-6 col-12">
-                                            <h2 class="heading heading-5 text-capitalize strong-500 mb-0">
-                                                <i class="ion-ios-arrow-back"></i> Langues
-                                            </h2>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-lg-6">
-                                        <div class="card no-border bg-transparent">
-                                            <div class="card-title px-0">
-                                                <h3 class="heading heading-6 strong-600">
-                                                Langues maitrisées :
-                                                </h3>
+                                    <div class="card-body px-0">
+                                        <div class="row">
+                                            <div class="col-md-6 col-lg-4"> 
+                                                <% @user.interests.each do |interest| %>           
+                                                    <span class="badge badge-lg badge-primary"><%= interest.name %></span>
+                                                <% end %>
                                             </div>
-                                            <div class="card-body px-0">
-                                                <div>
-                                                    <ul class="checkbox">
-                                                        <% Language.find(@user.spoken_languages.ids).each do |language| %>
-                                                            <li><%= language.name %></li>
-                                                        <% end %>
-                                                    </ul>
-                                                </div>           
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <div class="card no-border bg-transparent">
-                                            <div class="card-title px-0">
-                                                <h3 class="heading heading-6 strong-600">
-                                                Langues en cours d'apprentissage : 
-                                                </h3>
-                                            </div>
-                                            <div class="card-body px-0">  
-                                                <div>
-                                                    <ul class="checkbox">
-                                                        <% Language.find(@user.wanted_languages.ids).each do |language| %>
-                                                            <li><%= language.name %></li>
-                                                        <% end %> 
-                                                    </ul>
-                                                </div>  
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>                                                  
-                        <!-- Interests section  -->
-                            <div class="card no-border bg-transparent">
-                                <div class="card-title px-0 pb-0 no-border">
-                                    <h3 class="heading heading-6 strong-600">
-                                        Centres d'intérêts
-                                    </h3>
-                                </div>
-                                <div class="card-body px-0">
-                                    <div class="row">
-                                        <div class="col-md-6 col-lg-4"> 
-                                            <% @user.interests.each do |interest| %>           
-                                                <span class="badge badge-lg badge-primary"><%= interest.name %></span>
-                                            <% end %>
                                         </div>
                                     </div>
                                 </div>
@@ -140,5 +141,4 @@
             </div>
         </div>
     </div>
-</div>
 </section>
