--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <h5>Chat with <%= @other_user.first_name %></h5>
+  <h4>Discussion avec <%= @other_user.first_name %> :</h4>
   <% if @chat.messages.any? %>
     <div id="messages">
       <%= render partial: 'messages/message', collection: @chat.messages.order(id: :asc)%>
@@ -8,12 +8,15 @@
     <div id="messages">
     </div>
   <%end%>
+
 </div>
 <%= render partial: 'messages/message_form', locals: {message: @message, chat: @chat}%>
 </div>
 <script>
   createMessageChannel();
-  // app/assets/javascripts/channels/messages.js 
+  // app/assets/javascripts/channels/messages.js
   messageForm();
   // app/assets/javascripts/messages_form.js
 </script>
+
+<button type="button">Retour</button>
