--- a/app/views/users/match.html.erb
+++ b/app/views/users/match.html.erb
@@ -13,6 +13,7 @@
                     <% else %>
                       <%= image_tag "profil.jpg", :class=> "img-center"%>
                     <% end %>
+                    <%= link_to '', edit_user_registration_path, :class =>"btn-aux" %>
               </div>
 
         <!-- Profile details -->
