--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -11,7 +11,7 @@
                 <% else %>
                   <%= image_tag "profil.jpg", class: "img-center"%>
                 <% end %>
-                <a href="#" class="btn-aux"><i class="ion ion-edit"></i></a>
+                <%= link_to '', edit_user_registration_path, :class =>"btn-aux" %>
               </div>
               <div class="profile-details">
                 <h2 class="heading heading-4 strong-500 profile-name"><%= @user.first_name %> <%= @user.last_name %></h2>
