--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -19,4 +19,4 @@
   // app/assets/javascripts/messages_form.js
 </script>
 
-<button type="button">Retour</button>
+<%= link_to "Retour", user_chats_path(current_user), class: 'btn btn-styled btn-base-1 btn-circle' %>
