--- a/app/views/static_pages/_home.html.erb
+++ b/app/views/static_pages/_home.html.erb
@@ -1,4 +1,7 @@
- <!--    BANNER        -->
+<% content_for(:title) do %>
+<%= "Speak&Up | Accueil" %>
+<% end %>
+<!--    BANNER        -->
 <div class="image">
     <%= image_tag 'background-2.jpg', :class => 'banner-img2'%>
     <div class="centered">
@@ -35,7 +38,7 @@
                                 <ul class="aux-info">
                                     <li class="heading strong-400 text-center">
                                         <span class="d-block strong-600">Parle : Anglais</span>
-                                    
+
                                         <span class="d-block strong-600">Apprends à parler : Français</span>
                                     </li>
                                 </ul>
