--- a/app/views/static_pages/_index.html.erb
+++ b/app/views/static_pages/_index.html.erb
@@ -1,3 +1,7 @@
+<% content_for(:title) do %>
+<%= "Speak&Up | Home" %>
+<% end %>
+
 <section class="image">
     <%= image_tag 'index/restaurant.jpg', class: 'banner-img'%>
     <div class="centered">
@@ -10,7 +14,7 @@
                	Vous désirez rencontrer du monde avec qui parler étranger ?<br>
                	Ici nous vous proposons des profils compatibles avec vos envies d'apprentissage.<br><br>
                	<strong>Inscrivez vous afin de profiter de l'expérience !</strong>
-               </p> 
+               </p>
         	  </div>
         </div>
       </div>
@@ -25,6 +29,3 @@
     	</div>
     </section>
 </section>
-
-
-
