--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,6 @@
+<% content_for(:title) do %>
+<%= "Speak&Up | A propos" %>
+<% end %>
 <section class="slice sct-color-1">
 	<div class="container">
     <div class="row justify-content-center">
