--- a/app/views/interests/edit.html.erb
+++ b/app/views/interests/edit.html.erb
@@ -1,3 +1,6 @@
+<% content_for(:title) do %>
+<%= "Speak&Up | Editer mes interets" %>
+<% end %>
 <section class="slice-sm sct-color-1">
     <div class="profile">
         <div class="container">
@@ -19,14 +22,14 @@
                   <!-- Profile details -->
                   <div class="profile-details">
                       <h2 class="heading heading-4 strong-500 profile-name"><%= @user.first_name %> <%= @user.last_name %></h2>
-                      
+
                       <h3 class="heading heading-light heading-6 strong-400 profile-location"><%= @user.city %>, <%= @user.country %></h3>
                   </div>
 
                   <!-- Profile connect -->
-                  <div class="profile-connect mt-4">  
+                  <div class="profile-connect mt-4">
                       <a href="#" class="btn btn-styled btn-base-2 btn-circle">Send message</a>
-                            </div>  
+                            </div>
               </div>
                     </div>
                 </div>
@@ -73,7 +76,7 @@
                     </p>
                   </div>
                   <div class="card-body px-0">
-                    
+
                     <div class="row">
                       <div class="col-md-6 col-lg-4">
                         <div class="form-group">
@@ -84,7 +87,7 @@
                             <div class="form-group">
                               <%= f.submit "Ajouter", :class =>"btn btn-base-1"%>
                             </div>
-                           <% end %>                         
+                           <% end %>
                         </div>
                       </div>
                     </div>
