--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,3 +1,6 @@
+<% content_for(:title) do %>
+<%= "Speak&Up | Editer mon profil : " + @user.first_name + @user.last_name  %>
+<% end %>
 <section class="slice-sm sct-color-1">
     <div class="profile">
         <div class="container">
@@ -19,14 +22,14 @@
                   <!-- Profile details -->
                   <div class="profile-details">
                       <h2 class="heading heading-4 strong-500 profile-name"><%= @user.first_name %> <%= @user.last_name %></h2>
-                      
+
                       <h3 class="heading heading-light heading-6 strong-400 profile-location"><%= @user.city %>, <%= @user.country %></h3>
                   </div>
 
                   <!-- Profile connect -->
-                  <div class="profile-connect mt-4">  
+                  <div class="profile-connect mt-4">
                       <a href="#" class="btn btn-styled btn-base-2 btn-circle">Send message</a>
-                            </div>  
+                            </div>
               </div>
                     </div>
                 </div>
