--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -1,4 +1,6 @@
-<% provide(:title, @title) %>
+<% content_for(:title) do %>
+<%= "Speak&Up | Mes likes" %>
+<% end %>
 <section class="slice-sm sct-color-1">
   <div class="profile">
     <div class="container">
@@ -57,14 +59,14 @@
                         <div class="profile-picture profile-picture--style-2">
                           <img src="../../assets/images/prv/people/person-1.jpg" >
                         </div>
-        
+
                       <div class="block-body text-center">
                         <h3 class="heading heading-6 strong-600 mb-0 mb-0"><%= user.first_name %></h3>
                         <h3 class="heading heading-light heading-sm strong-300"><%= user.city %>, <%= user.country %></h3>
                         <div class="aux-info-wrapper border-top">
                           <ul class="aux-info">
                             <li class="heading strong-400 text-center">
-                              <span class="d-block strong-600">Parle : Anglais</span>  
+                              <span class="d-block strong-600">Parle : Anglais</span>
                               <span class="d-block strong-600">Apprends à parler : Français</span>
                             </li>
                           </ul>
