--- a/app/views/users/match.html.erb
+++ b/app/views/users/match.html.erb
@@ -44,7 +44,7 @@
           <div class="link-menu link-menu--style-3 py-4 border-bottom">
             <%= link_to 'Mon profil', current_user %>
             <%= link_to 'Modifier mon profil', current_user %>
-            <%= link_to 'Mes Matchs', match_user_path(current_user) %>
+            <%= link_to 'Mes Matchs', match_user_path(current_user), class: 'active' %>
             <%= link_to 'Following', following_user_path(current_user) %>
           </div>
 
