--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -46,7 +46,7 @@
                             </div>
                         </div>
                         <div class="link-menu link-menu--style-3 py-4 border-bottom">
-                        <%= link_to 'Mon profil', current_user%>
+                        <%= link_to 'Mon profil', current_user, class: 'active'%>
                         <%= link_to 'Modifier mon profil', edit_user_registration_path %>
                         <%= link_to 'Mes Matchs', match_user_path(current_user) %>
                         <%= link_to 'Following', following_user_path(current_user) %>
