modif titre + banner

--- a/app/views/static_pages/_home.html.erb
+++ b/app/views/static_pages/_home.html.erb
@@ -2,7 +2,8 @@
 <div class="image">
     <%= image_tag 'background-2.jpg', :class => 'banner-img2'%>
     
-    <div class="centered">
+    <div class=" container centered-2">
+        <div class= "row">
         <p class="notice"><%= notice %></p>
         <p class="alert"><%= alert %></p>
         <h1 class="heading display-4 strong-400 c-white">
@@ -10,7 +11,8 @@
         </h1>
 
         <div class="lead mt-3 mb-3 c-white">
-            Speak&UP
+            Speak&UP est la première plateforme de rencontre uniquement basée sur l'apprentissage des langues.
+        </div>
         </div>
     </div>
 </div>
@@ -18,7 +20,7 @@
 
 <section class="slice sct-color-1">
     <div class="container">
-        <h3>Quelques profils succeptibles de vous interesser :</h3>
+        <h3 class="c-orange">Quelques profils succeptibles de vous interesser :</h3>
 
         <div class="widget mt-4">
             <div class="row-wrapper">
