--- a/app/views/static_pages/_index.html.erb
+++ b/app/views/static_pages/_index.html.erb
@@ -22,12 +22,14 @@
           </div>
 
           <div class="col-lg-3 col-lg-pull-2">
+            <div class "row">
             <div class="container inscription">
               <div class="boutons">
                 <p><%= link_to "Se connecter", new_user_session_path, class: 'btn btn-styled btn-base-1 btn-circle'%></p>
                 <p><%= link_to "S'enregistrer", new_user_registration_path, class: 'btn btn-styled btn-base-1 btn-circle' %></p>
               </div>          
             </div>
+          </div>
           </div>
 
       </div>    
