--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -52,6 +52,7 @@
                         <%= link_to 'Modifier mon profil', edit_user_registration_path %>
                         <%= link_to 'Mes Matchs', match_user_path(current_user) %>
                         <%= link_to 'Following', following_user_path(current_user) %>
+                        <%= link_to 'Messagerie', user_chats_path(current_user) %>
                       </div>
                     <!-- Account settings -->
                         <div class="row">
