--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -29,7 +29,6 @@
     opacity: 0.85;
     filter: alpha(opacity=85);
     width: 100%;
-
 }
 
 .image{
@@ -88,9 +87,10 @@
 }
 
 
-.bg-base-1, .btn-base-1, .badge-primary{
+.bg-base-1, .btn-base-1, .badge-primary, .timeline-img{
     background-color: #FF5A26 !important;
 }
+
 
 .link-menu--style-3 a{
     background-color: #FF5A26 !important;
