add follow button homepage in progress

--- a/app/views/static_pages/_home.html.erb
+++ b/app/views/static_pages/_home.html.erb
@@ -57,7 +57,7 @@
                             </li>
                           </ul>
                         </div>
-                        <a href="#" class="btn btn-styled btn-base-1 btn-outline btn-circle px-4 mt-2">Ajouter</a>
+                        <p><%= render 'users/follow_form', class: 'btn btn-styled btn-base-1 btn-outline btn-circle px-4 mt-2' %></p>
                       </div>
                     </div>
                   </div>
