--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,7 +30,7 @@
 					        <!-- Profile connect -->
 					        <div class="profile-connect mt-4">
 					            <p><%= render 'follow_form' %></p>
-					            <p><%= render 'send_message' %></p>
+					            <p><%= render '/chats/send_message' %></p>
                             </div>
    						</div>
                 </div>
