--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -28,13 +28,26 @@
   padding-left: 5px;
 }
 
-button {
-    background-color: #2255AD;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
+.message{
+  border: 2px solid #dedede;
+  background-color: #ECECEC;
+  color: #03050f !important;
+  border-radius: 50px;
+  padding: 10px 20px;
+  margin: 10px 0;
+  max-width: 500px !important;
+  text-align: right;
+}
+
+.darker {
+  border-color: #ccc;
+  background-color: #ff5a26;
+  color: #fff !important;
+  text-align: left;
+}
+
+.message::after {
+  content: "";
+  clear: both;
+  display: table;
 }
